relative import fix

--- a/notebooks/line_detection.ipynb
+++ b/notebooks/line_detection.ipynb
@@ -2,44 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/lillemor/Documents/lgd-utils/asset-data-extraction/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import pymupdf\n",
     "import cv2\n",
     "from pathlib import Path\n",
     "import sys\n",
-    "from skimage.morphology import skeletonize\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "from math import degrees, atan2,sqrt\n",
+    "from dataclasses import dataclass\n",
     "\n",
     "from skimage import io as io\n",
+    "from skimage.morphology import skeletonize\n",
     "from skimage.color import rgb2gray\n",
     "from skimage.filters import gaussian,threshold_otsu\n",
     "from skimage.measure import find_contours,approximate_polygon,label\n",
     "from skimage.transform import probabilistic_hough_line\n",
-    "from math import degrees, atan2,sqrt\n",
-    "from dataclasses import dataclass\n",
     "\n",
     "base_dir = Path.cwd().parent.resolve()\n",
+    "sys.path.append(str(base_dir))\n",
     "\n",
-    "src_path = base_dir / \"src\"\n",
-    "sys.path.append(str(src_path))\n",
-    "print(src_path)\n",
-    "\n",
-    "from line_detection import turn_page_to_image, extract_geometric_lines\n",
-    "from text import create_text_lines\n",
-    "from geometric_objects import Line, Point"
+    "from src.line_detection import turn_page_to_image, extract_geometric_lines\n",
+    "from src.text import create_text_lines\n",
+    "from src.geometric_objects import Line, Point"
    ]
   },
   {
