--- a/notebooks/map_features_plotting.ipynb
+++ b/notebooks/map_features_plotting.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "78059a86",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/lillemor/Documents/lgd-utils/asset-data-extraction/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -29,12 +21,10 @@
     "\n",
     "\n",
     "base_dir = Path.cwd().parent.resolve()\n",
+    "sys.path.append(str(base_dir))\n",
     "\n",
-    "src_path = base_dir / \"src\"\n",
-    "sys.path.append(str(src_path))\n",
-    "print(src_path)\n",
     "\n",
-    "from line_detection import extract_geometric_lines"
+    "from src.line_detection import extract_geometric_lines"
    ]
   },
   {
