--- a/notebooks/extract_images.ipynb
+++ b/notebooks/extract_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,13 @@
     "\n",
     "repo_root = Path.cwd().parent.resolve()\n",
     "\n",
-    "src_path = repo_root / \"src\"\n",
-    "sys.path.append(str(src_path))\n",
+    "sys.path.append(str(repo_root))\n",
     "\n",
     "\n",
-    "from text import  create_text_lines, create_text_blocks\n",
-    "from bounding_box import cluster_drawings\n",
-    "from bounding_box import expand_bbox\n",
-    "from utils import cluster_text_elements"
+    "from src.text import  create_text_lines, create_text_blocks\n",
+    "from src.bounding_box import cluster_drawings\n",
+    "from src.bounding_box import expand_bbox\n",
+    "from src.utils import cluster_text_elements"
    ]
   },
   {
@@ -199,9 +198,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -213,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
