--- a/notebooks/line_detection.ipynb
+++ b/notebooks/line_detection.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
     "\n",
     "\n",
     "# Save the image with lines and processed images\n",
-    "cv2.imwrite(Path(base_dir/\"data/lines.png_HL\"), line_image)\n",
+    "cv2.imwrite(Path(base_dir/\"data/lines_HL.png\"), line_image)\n",
     "image = turn_page_to_image(page)\n",
     "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "blurred = cv2.GaussianBlur(gray, (5, 5), sigmaX=1.2)\n",
