split doc  pages into subfolders + create groundtruth

--- a/notebooks/create_testdata.ipynb
+++ b/notebooks/create_testdata.ipynb
@@ -2,27 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_1.pdf\n",
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_2.pdf\n",
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_3.pdf\n",
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_4.pdf\n",
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_5.pdf\n",
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_6.pdf\n",
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_7.pdf\n",
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_8.pdf\n",
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_9.pdf\n",
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_10.pdf\n",
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_11.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "This notebook is used to create input pages for `classify_scanned_page.ipynb` from original reports.\n",
@@ -51,7 +33,7 @@
     "import sys\n",
     "\n",
     "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "sys.path.append(os.path.join(repo_root, \"src\"))\n",
+    "sys.path.append(os.path.join(repo_root))\n",
     "\n",
     "\n",
     "filename = \"18686.pdf\"\n",
@@ -75,6 +57,143 @@
     "               new_doc.save(out_path)\n",
     "               new_doc.close()\n",
     "               print(f\"saved to {out_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Classifying and saving selected pages:   0%|          | 0/1 [00:00<?, ?it/s]Language 'da' not supported. Using default german language.\n",
+      "Classifying and saving selected pages: 100%|██████████| 1/1 [00:55<00:00, 55.57s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import pymupdf\n",
+    "from tqdm import tqdm\n",
+    "from pathlib import Path\n",
+    "import sys\n",
+    "# Config\n",
+    "repo_root = Path.cwd().parent.resolve()\n",
+    "sys.path.append(str(repo_root))\n",
+    "\n",
+    "from src.classify_scanned_page import classify_pdf\n",
+    "from main import read_params\n",
+    "\n",
+    "\n",
+    "input_dir = repo_root / \"data/input/reports_no_gt\"\n",
+    "output_base_dir = repo_root / \"data/input/single_pages\"\n",
+    "matching_params = read_params(repo_root / \"matching_params.yml\")\n",
+    "\n",
+    "# Max number of pages per class per report to save\n",
+    "max_per_class = {\n",
+    "    \"text\": 1,\n",
+    "    \"boreprofile\": 2,\n",
+    "    \"maps\": 2,\n",
+    "    \"title_page\": 2,\n",
+    "    \"unknown\": 1\n",
+    "}\n",
+    "\n",
+    "# Get list of downloaded PDFs\n",
+    "pdf_files = list(input_dir.glob(\"*.pdf\"))\n",
+    "sampled_pdfs = random.sample(pdf_files, 1)\n",
+    "\n",
+    "# Process each PDF\n",
+    "for pdf_path in tqdm(sampled_pdfs, desc=\"Classifying and saving selected pages\"):\n",
+    "    classification_result = classify_pdf(pdf_path, matching_params)\n",
+    "    if not classification_result:\n",
+    "        continue\n",
+    "\n",
+    "    filename_base = pdf_path.stem\n",
+    "    page_by_class = {}\n",
+    "\n",
+    "    # Group pages by class\n",
+    "    for page_info in classification_result[\"classification\"]:\n",
+    "        page_num = page_info[\"Page\"]\n",
+    "        page_class = next((cls.upper() for cls, val in page_info.items() if cls != \"Page\" and val == 1), \"UNKNOWN\").lower()\n",
+    "\n",
+    "        page_by_class.setdefault(page_class, []).append(page_num)\n",
+    "\n",
+    "    # Save pages\n",
+    "    with pymupdf.open(pdf_path) as doc:\n",
+    "        for class_label, page_nums in page_by_class.items():\n",
+    "            max_pages = max_per_class.get(class_label, 1)\n",
+    "            selected_pages = random.sample(page_nums, min(len(page_nums), max_pages))\n",
+    "\n",
+    "            output_dir = output_base_dir / class_label\n",
+    "            output_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "            for page_num in selected_pages:\n",
+    "                out_filename = f\"{filename_base}_{page_num}.pdf\"\n",
+    "                out_path = output_dir / out_filename\n",
+    "\n",
+    "                new_doc = pymupdf.open()\n",
+    "                new_doc.insert_pdf(doc, from_page=page_num - 1, to_page=page_num - 1)\n",
+    "                new_doc.save(out_path)\n",
+    "                new_doc.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## create groundtruth based on input in subfolder of single pages:\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "# Configuration\n",
+    "repo_root = Path.cwd().parent.resolve()\n",
+    "sys.path.append(str(repo_root))\n",
+    "\n",
+    "input_folder = repo_root/ \"data/input/single_pages\"\n",
+    "\n",
+    "# All possible classes (must match ground truth schema)\n",
+    "classes = [\"Text\", \"Boreprofile\", \"Maps\", \"Title_Page\", \"Unknown\"]\n",
+    "\n",
+    "folder_to_class = {\n",
+    "    \"text\": \"Text\",\n",
+    "    \"boreprofile\": \"Boreprofile\",\n",
+    "    \"maps\": \"Maps\",\n",
+    "    \"title_page\": \"Title_Page\",\n",
+    "    \"unknown\": \"Unknown\"\n",
+    "}\n",
+    "\n",
+    "ground_truth = []\n",
+    "\n",
+    "for class_folder in input_folder.iterdir():\n",
+    "    if not class_folder.is_dir():\n",
+    "        continue\n",
+    "\n",
+    "    folder_name = class_folder.name.lower()\n",
+    "    if folder_name not in folder_to_class:\n",
+    "        print(f\"Skipping unrecognized folder: {class_folder.name}\")\n",
+    "        continue\n",
+    "\n",
+    "    class_label = folder_to_class[folder_name]\n",
+    "\n",
+    "    for pdf_file in class_folder.glob(\"*.pdf\"):\n",
+    "        entry = {\n",
+    "            \"filename\": pdf_file.name,\n",
+    "            \"classification\": [{\n",
+    "                \"Page\": 1,\n",
+    "                **{cls: int(cls == class_label) for cls in classes}\n",
+    "            }]\n",
+    "        }\n",
+    "        ground_truth.append(entry)\n",
+    "\n",
+    "output_path = repo_root /\"data/gt_single_pages_new.json\"\n",
+    "output_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "with output_path.open(\"w\") as f:\n",
+    "    json.dump(ground_truth, f, indent=4)\n",
+    "\n",
+    "print(f\"Saved {len(ground_truth)} entries to {output_path}\")\n"
    ]
   }
  ],
