--- a/notebooks/asset-notebook_S3.ipynb
+++ b/notebooks/asset-notebook_S3.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'Notebook to retrieve files from the S3 bucket'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,12 +38,10 @@
     "from pathlib import Path\n",
     "\n",
     "repo_root = Path.cwd().parent.resolve()\n",
-    "\n",
-    "src_path = repo_root / \"src\"\n",
-    "sys.path.append(str(src_path))\n",
+    "sys.path.append(str(repo_root))\n",
     "\n",
     "\n",
-    "from utils import is_digitally_born\n",
+    "from src.utils import is_digitally_born\n",
     "\n",
     "\"\"\"Notebook to retrieve files from the S3 bucket\"\"\""
    ]
