clean up imports

--- a/notebooks/create_testdata.ipynb
+++ b/notebooks/create_testdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,36 @@
     "import os\n",
     "import pymupdf\n",
     "import sys\n",
+    "import random\n",
+    "from tqdm import tqdm\n",
+    "from pathlib import Path\n",
+    "import json\n",
     "\n",
-    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "sys.path.append(os.path.join(repo_root))\n",
+    "# Configuration\n",
+    "repo_root = Path.cwd().parent.resolve()\n",
+    "sys.path.append(str(repo_root))\n",
     "\n",
+    "from src.classify_scanned_page import classify_pdf\n",
+    "from main import read_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/2155_1.pdf\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "filename = \"18686.pdf\"\n",
-    "wanted_pages = range(0,400)\n",
+    "filename = \"2155.pdf\"\n",
+    "wanted_pages = range(0,2)\n",
     "out_category = \"\"\n",
     "\n",
     "pdf_path = os.path.join(repo_root, \"data/input/\", filename)\n",
@@ -63,30 +86,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Classifying and saving selected pages:   0%|          | 0/1 [00:00<?, ?it/s]Language 'da' not supported. Using default german language.\n",
-      "Classifying and saving selected pages: 100%|██████████| 1/1 [00:55<00:00, 55.57s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import random\n",
-    "import pymupdf\n",
-    "from tqdm import tqdm\n",
-    "from pathlib import Path\n",
-    "import sys\n",
-    "# Config\n",
-    "repo_root = Path.cwd().parent.resolve()\n",
-    "sys.path.append(str(repo_root))\n",
-    "\n",
-    "from src.classify_scanned_page import classify_pdf\n",
-    "from main import read_params\n",
-    "\n",
-    "\n",
     "input_dir = repo_root / \"data/input/reports_no_gt\"\n",
     "output_base_dir = repo_root / \"data/input/single_pages\"\n",
     "matching_params = read_params(repo_root / \"matching_params.yml\")\n",
@@ -146,11 +147,6 @@
    "outputs": [],
    "source": [
     "## create groundtruth based on input in subfolder of single pages:\n",
-    "import json\n",
-    "from pathlib import Path\n",
-    "# Configuration\n",
-    "repo_root = Path.cwd().parent.resolve()\n",
-    "sys.path.append(str(repo_root))\n",
     "\n",
     "input_folder = repo_root/ \"data/input/single_pages\"\n",
     "\n",
