--- a/notebooks/create_testdata.ipynb
+++ b/notebooks/create_testdata.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "This notebook is used to create input pages for `classify_scanned_page.ipynb` from original reports.\n",
+    "This notebook is used to create input pages for the classification pipeline and create ground truth for single pages.\n",
     "\n",
     "Instructions:\n",
     "\n",
@@ -23,9 +23,8 @@
     "   - \"boreprofile\"  \n",
     "   - \"maps\" \n",
     "   - \"text\" \n",
-    "   - \"title_page\"  \n",
-    "\n",
-    "The extracted pages are used as **training data** for classification.\n",
+    "   - \"title_page\" \n",
+    "   -\"unknown\"  \n",
     "\"\"\"\n",
     "\n",
     "import os\n",
@@ -46,17 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/2155_1.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "filename = \"2155.pdf\"\n",
@@ -64,7 +55,7 @@
     "out_category = \"\"\n",
     "\n",
     "pdf_path = os.path.join(repo_root, \"data/input/\", filename)\n",
-    "out_dir = os.path.join(repo_root, f\"data/input/{out_category}\")\n",
+    "out_dir = os.path.join(repo_root, f\"data/input/singel_pages/{out_category}\")\n",
     "os.makedirs(out_dir, exist_ok=True)\n",
     "\n",
     "with pymupdf.open(pdf_path) as doc:\n",
@@ -117,7 +108,7 @@
     "    # Group pages by class\n",
     "    for page_info in classification_result[\"classification\"]:\n",
     "        page_num = page_info[\"Page\"]\n",
-    "        page_class = next((cls.upper() for cls, val in page_info.items() if cls != \"Page\" and val == 1), \"UNKNOWN\").lower()\n",
+    "        page_class = next((cls for cls, val in page_info.items() if cls != \"Page\" and val == 1), \"UNKNOWN\").lower()\n",
     "\n",
     "        page_by_class.setdefault(page_class, []).append(page_num)\n",
     "\n",
@@ -195,9 +186,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv)",
+   "display_name": "venv",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
