--- a/notebooks/create_testdata.ipynb
+++ b/notebooks/create_testdata.ipynb
@@ -108,7 +108,7 @@
     "    # Group pages by class\n",
     "    for page_info in classification_result[\"classification\"]:\n",
     "        page_num = page_info[\"Page\"]\n",
-    "        page_class = next((cls for cls, val in page_info.items() if cls != \"Page\" and val == 1), \"UNKNOWN\").lower()\n",
+    "        page_class = next((cls for cls, val in page_info.items() if cls != \"Page\" and val == 1), \"unknown\").lower()\n",
     "\n",
     "        page_by_class.setdefault(page_class, []).append(page_num)\n",
     "\n",
