fix imports and clean up notebooks

--- a/notebooks/create_testdata.ipynb
+++ b/notebooks/create_testdata.ipynb
@@ -39,7 +39,7 @@
     "repo_root = Path.cwd().parent.resolve()\n",
     "sys.path.append(str(repo_root))\n",
     "\n",
-    "from src.classify_scanned_page import classify_pdf\n",
+    "from src.classify_page import classify_pdf\n",
     "from main import read_params"
    ]
   },
