--- a/notebooks/extract_images.ipynb
+++ b/notebooks/extract_images.ipynb
@@ -18,15 +18,14 @@
     "sys.path.append(str(repo_root))\n",
     "\n",
     "\n",
-    "from src.text import  create_text_lines, create_text_blocks\n",
+    "from src.text_objects import  create_text_lines, create_text_blocks\n",
     "from src.bounding_box import cluster_drawings\n",
-    "from src.bounding_box import expand_bbox\n",
-    "from src.utils import cluster_text_elements"
+    "from src.bounding_box import expand_bbox\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
