--- a/notebooks/layoutparser.ipynb
+++ b/notebooks/layoutparser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,28 @@
     "import numpy as np\n",
     "import sys\n",
     "import os\n",
+    "from pathlib import Path\n",
     "\n",
-    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "sys.path.append(os.path.join(repo_root, \"src\"))\n",
+    "base_dir = Path.cwd().parent.resolve()\n",
+    "sys.path.append(str(base_dir))\n",
     "\n",
-    "from text import TextWord"
+    "from src.text_objects import TextWord"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The checkpoint state_dict contains keys that are not used by the model:\n",
+      "  \u001b[35mproposal_generator.anchor_generator.cell_anchors.{0, 1, 2, 3, 4}\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "model = lp.Detectron2LayoutModel('lp://PubLayNet/faster_rcnn_R_50_FPN_3x/config', \n",
     "                                 extra_config=[\"MODEL.ROI_HEADS.SCORE_THRESH_TEST\", 0.8],\n",
