--- a/notebooks/line_detection.ipynb
+++ b/notebooks/line_detection.ipynb
@@ -29,7 +29,7 @@
     "sys.path.append(str(base_dir))\n",
     "\n",
     "from src.line_detection import turn_page_to_image, extract_geometric_lines\n",
-    "from src.text import create_text_lines\n",
+    "from src.text_objects import create_text_lines\n",
     "from src.geometric_objects import Line, Point"
    ]
   },
