--- a/notebooks/layoutparser.ipynb
+++ b/notebooks/layoutparser.ipynb
@@ -57,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf_path = os.path.join(repo_root,\"data/NAB/Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\")\n",
+    "pdf_path = os.path.join(base_dir,\"data/NAB/Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\")\n",
     "#pdf_path = \"data/test/1062.pdf\"\n",
     "with fitz.Document(pdf_path) as doc:\n",
     "    page = doc.load_page(13)\n",
